working minter - need refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <h3 class="fixed top-3 w-screen text-left font-mono py-10 px-10 top-0 text-white">Metamask UI</h3>
+    <h3 class="fixed top-3 w-screen text-left font-mono py-10 px-10 top-0 text-white">Metamask UI - NFT Minter</h3>
     <button id="access" class="fixed top-8 right-8 text-sm font-sans font-semibold rounded-full bg-blue-800 shadow-lg text-white text-center py-2 px-4 capitalize shadow-lg shadow-blue-800/50"></button>
     <div class="static grid grid-cols-2 gap-4 jusity-center items-center h-sreen">
         <div class="flex justify-center items-center h-screen bg-blue-500">
