--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
                 <h4 class="text-m text-white font-mono font-semibold mb-1">Minting fee: <span class="font-s txt-center text-white pb-4" id="fee"></span></h4>
                 <h4 class="text-m text-white font-mono font-semibold mb-5"><span class="block font-s txt-center text-white pb-4" id="supply"></span>How many tokens you want to mint?</h4>
                 <div class="flex justify-center items-center">
-                    <button id="decrease" class="text-sm font-sans bg-white text-blue-500 rounded px-5 py-5 font-semibold text-white text-center decreace-amount">-</button>
+                    <button id="decrease" class="text-sm font-sans bg-white text-blue-500 rounded px-5 py-5 font-semibold text-white text-center decrease amount">-</button>
                     <input type="text" id="amount-counter" placeholder="0" value="0" class="bg-transparent border-transparent color-white font-sans text-center font-light text-white font-bold font-mono focus:outline-none w-20 placeholder:text-white placeholder:font-mono placeholder:font-bold"/>
-                    <button id="increase" class="text-sm font-sans bg-white text-blue-500 rounded px-5 py-5 font-semibold text-white text-center increase-amount">+</button>
+                    <button id="increase" class="text-sm font-sans bg-white text-blue-500 rounded px-5 py-5 font-semibold text-white text-center increase amount">+</button>
                 </div>
                 <button id="send" class="text-sm font-sans font-semibold rounded-full bg-blue-800 shadow-lg text-white text-center py-2 px-4 capitalize shadow-lg shadow-blue-800/50 mt-8 w-40">send</button>
             </div>
