--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 user-scalable=no"
+    />
     <title>Web3-test</title>
     <script src="https://cdn.tailwindcss.com"></script>
-
-</head>
-<body>
-    <div id="alert-msg" class="hidden fixed flex justify-center text-white mx-auto inset-x-0 top-8 text-center"><p class="rounded-full font-sans shadow-lg shadow-blue-800/50 font-semibold bg-blue-400 p-3 text-center w-2/12" >Processing Transaction...</p></div>
-    <h3 class="fixed top-3 w-screen text-left font-mono py-10 px-10 top-0 text-white">NFT Minter</h3>
-    <button id="access" class="fixed top-8 right-8 text-sm font-sans font-semibold rounded-full bg-blue-800 shadow-lg text-white text-center py-2 px-4 capitalize shadow-lg shadow-blue-800/50"></button>
-    <div class="static grid grid-cols-2 gap-4 jusity-center items-center h-sreen">
-        <div class="flex justify-center items-center h-screen bg-blue-500">
-            <h4 class="text-2xl text-white font-mono font-semibold"><span title="0x00" class="block text-center text-white" id="user-wallet-address">user address</span><span class="block text-center" id="user-balance">ETH</span></h4>
+  </head>
+  <body>
+    <div
+      id="alert-msg"
+      class="hidden fixed flex justify-center text-white mx-auto inset-x-0 top-8 text-center"
+    >
+      <p
+        class="rounded-full font-sans shadow-lg shadow-blue-800/50 font-semibold bg-blue-400 p-3 text-center w-2/12"
+      >
+        Processing Transaction...
+      </p>
+    </div>
+    <h3
+      class="fixed top-3 w-screen text-left font-mono py-10 px-10 top-0 text-white"
+    >
+      NFT Minter
+    </h3>
+    <button
+      id="access"
+      class="fixed top-8 right-8 text-sm font-sans font-semibold rounded-full bg-blue-800 shadow-lg text-white text-center py-2 px-4 capitalize shadow-lg shadow-blue-800/50"
+    ></button>
+    <div
+      class="static grid grid-cols-1 md:grid-cols-2 gap-4 jusity-center items-center md:h-full"
+    >
+      <div class="flex justify-center items-center h-80 md:h-full bg-blue-500">
+        <h4 class="text-2xl text-white font-mono font-semibold">
+          <span
+            title="0x00"
+            class="block text-center text-white"
+            id="user-wallet-address"
+            >user address</span
+          ><span class="block text-center" id="user-balance">ETH</span>
+        </h4>
+      </div>
+      <div
+        id="data"
+        class="flex justify-center items-center flex-col h-96 md:h-screen font-mono"
+      >
+        <div
+          id="contract-ui"
+          class="hidden text-center w-80 bg-blue-500 shadow-lg rounded-md px-10 py-10"
+        >
+          <h4 class="text-m text-white font-mono font-semibold mb-1">
+            Minting fee:
+            <span class="font-s txt-center text-white pb-4" id="fee"></span>
+          </h4>
+          <h4 class="text-m text-white font-mono font-semibold mb-5">
+            <span
+              class="block font-s txt-center text-white pb-4"
+              id="supply"
+            ></span
+            >How many tokens you want to mint?
+          </h4>
+          <div class="flex justify-center items-center">
+            <button
+              id="decrease"
+              class="text-sm font-sans bg-white text-blue-500 rounded px-5 py-5 font-semibold text-white text-center decrease amount"
+            >
+              -
+            </button>
+            <input
+              type="text"
+              id="amount-counter"
+              placeholder="0"
+              value="0"
+              class="bg-transparent border-transparent color-white font-sans text-center font-light text-white font-bold font-mono focus:outline-none w-20 placeholder:text-white placeholder:font-mono placeholder:font-bold"
+            />
+            <button
+              id="increase"
+              class="text-sm font-sans bg-white text-blue-500 rounded px-5 py-5 font-semibold text-white text-center increase amount"
+            >
+              +
+            </button>
+          </div>
+          <button
+            id="send"
+            class="text-sm font-sans font-semibold rounded-full bg-blue-800 shadow-lg text-white text-center py-2 px-4 capitalize shadow-lg shadow-blue-800/50 mt-8 w-40"
+          >
+            send
+          </button>
         </div>
-        <div id="data" class="flex justify-center items-center flex-col h-screen font-mono">            
-            <div id="contract-ui" class="hidden text-center w-80 bg-blue-500 shadow-lg rounded-md px-10 py-10">
-                <h4 class="text-m text-white font-mono font-semibold mb-1">Minting fee: <span class="font-s txt-center text-white pb-4" id="fee"></span></h4>
-                <h4 class="text-m text-white font-mono font-semibold mb-5"><span class="block font-s txt-center text-white pb-4" id="supply"></span>How many tokens you want to mint?</h4>
-                <div class="flex justify-center items-center">
-                    <button id="decrease" class="text-sm font-sans bg-white text-blue-500 rounded px-5 py-5 font-semibold text-white text-center decrease amount">-</button>
-                    <input type="text" id="amount-counter" placeholder="0" value="0" class="bg-transparent border-transparent color-white font-sans text-center font-light text-white font-bold font-mono focus:outline-none w-20 placeholder:text-white placeholder:font-mono placeholder:font-bold"/>
-                    <button id="increase" class="text-sm font-sans bg-white text-blue-500 rounded px-5 py-5 font-semibold text-white text-center increase amount">+</button>
-                </div>
-                <button id="send" class="text-sm font-sans font-semibold rounded-full bg-blue-800 shadow-lg text-white text-center py-2 px-4 capitalize shadow-lg shadow-blue-800/50 mt-8 w-40">send</button>
-            </div>
-        </div>
-    </div>    
+      </div>
+    </div>
     <script type="module" src="./js/index.js"></script>
-</body>
+  </body>
 </html>
