--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
             <h4
               class="block text-sm text-center font-semibold text-white pb-4 px-4 pt-6 md:px-0 md:pt-0"
             >
-              How many tokens you want to mint?
+              Mint amount
             </h4>
             <div
               class="flex justify-center items-center pb-10 md:pb-0 mt-4 md:mt-0"
